force-app/main/default/objects/Apttus_Billing__ForecastedBillingSummary__c/Apttus_Billing__ForecastedBillingSummary__c.object-meta.xml
<CustomObject>
    <label>Forecasted Billing Summary</label>
    <nameField>
        <displayFormat>BSUM-{00000000}</displayFormat>
        <label>Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasted Billing Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>