force-app/main/default/objects/Apttus_Billing__ForecastedBillingSummary__c/fields/Apttus_Billing__BillToAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillToAccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Id of the corresponding Bill To Account</description>
    <inlineHelpText>Id of the corresponding Bill To Account</inlineHelpText>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forecasted Billing Summaries</relationshipLabel>
    <relationshipName>ForecastedBillingSummaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>