force-app/main/default/objects/Apttus_Billing__ForecastedBillingSummary__c/fields/Apttus_Billing__DueDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DueDate__c</fullName>
    <description>The date payment is due</description>
    <inlineHelpText>The date payment is due</inlineHelpText>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>