force-app/main/default/objects/Apttus_Billing__ForecastedBillingSummary__c/fields/Apttus_Billing__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceDate__c</fullName>
    <description>The Ready for Invoice Date of the contributing Billing Schedules</description>
    <inlineHelpText>The Ready for Invoice Date of the contributing Billing Schedules</inlineHelpText>
    <label>Invoice Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>