force-app/main/default/objects/Apttus_Billing__ForecastedBillingSummary__c/fields/Apttus_Billing__OrderId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the associated Order.</description>
    <inlineHelpText>Id of the associated Order.</inlineHelpText>
    <label>Order</label>
    <referenceTo>Apttus_Config2__Order__c</referenceTo>
    <relationshipLabel>Forecasted Billing Summaries</relationshipLabel>
    <relationshipName>ForecastedBillingSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>