force-app/main/default/objects/Apttus_Billing__ForecastedBillingSummary__c/fields/Apttus_Billing__PaymentTermId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PaymentTermId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the Payment Term used to compute the Due Date</description>
    <inlineHelpText>Id of the Payment Term used to compute the Due Date</inlineHelpText>
    <label>Payment Term</label>
    <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
    <relationshipLabel>Forecasted Billing Summaries</relationshipLabel>
    <relationshipName>ForecastedBillingSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>