force-app/main/default/objects/Apttus_Billing__ForecastedBillingSummary__c/fields/Apttus_Billing__TotalInvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalInvoiceAmount__c</fullName>
    <description>The Invoice due amount</description>
    <inlineHelpText>The Invoice due amount</inlineHelpText>
    <label>Total Invoice Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>