force-app/main/default/objects/Apttus_Billing__ForecastedBillingSummary__c/fields/Apttus_Billing__TotalOneTimeFeeAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalOneTimeFeeAmount__c</fullName>
    <description>The sum of all One Time fees</description>
    <inlineHelpText>The sum of all One Time fees</inlineHelpText>
    <label>Total One Time Fee Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>