force-app/main/default/objects/Apttus_Billing__ForecastedBillingSummary__c/fields/Apttus_Billing__TotalUsageFeeAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalUsageFeeAmount__c</fullName>
    <description>The sum of all Usage fees</description>
    <inlineHelpText>The sum of all Usage fees</inlineHelpText>
    <label>Total Usage Fee Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>